# ChangeLog for dev-python/beautifulsoup
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.41 2010/08/06 15:56:39 jer Exp $

  06 Aug 2010; Jeroen Roovers <jer@gentoo.org> beautifulsoup-3.0.8.1.ebuild:
  Stable for PPC (bug #328885).

  06 Aug 2010; Jeroen Roovers <jer@gentoo.org> beautifulsoup-3.0.8.1.ebuild:
  Stable for HPPA (bug #328885).

  31 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  beautifulsoup-3.0.8.1.ebuild:
  Stable on amd64 wrt bug #328885

  24 Jul 2010; Raúl Porcel <armin76@gentoo.org>
  beautifulsoup-3.0.8.1.ebuild:
  ia64/sparc stable wrt #328885

  19 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  beautifulsoup-3.0.8.1.ebuild:
  ppc64 stable wrt #328885

  19 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  beautifulsoup-3.0.8.1.ebuild:
  stable x86, bug 328885

*beautifulsoup-3.0.8.1 (18 Jun 2010)

  18 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -beautifulsoup-3.0.7.ebuild, +beautifulsoup-3.0.8.1.ebuild:
  Version bump.

  22 May 2010; Raúl Porcel <armin76@gentoo.org> beautifulsoup-3.0.7.ebuild,
  beautifulsoup-3.0.8.ebuild, beautifulsoup-3.1.0.1-r1.ebuild:
  Add ~arm

  22 May 2010; Raúl Porcel <armin76@gentoo.org> beautifulsoup-3.0.7.ebuild,
  beautifulsoup-3.0.8.ebuild, beautifulsoup-3.1.0.1-r1.ebuild:
  Add ~alpha

  21 Feb 2010; Raúl Porcel <armin76@gentoo.org> beautifulsoup-3.0.8.ebuild:
  ia64/sparc stable wrt #301954

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org> beautifulsoup-3.0.8.ebuild:
  Marked ppc stable for bug #301954.

  07 Feb 2010; Markus Meier <maekke@gentoo.org> beautifulsoup-3.0.8.ebuild:
  amd64/x86 stable, bug #301954

  26 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  beautifulsoup-3.0.8.ebuild, beautifulsoup-3.1.0.1-r1.ebuild:
  Marked ~amd64-linux (bug #302290) fix for Prefix

  24 Jan 2010; Jeroen Roovers <jer@gentoo.org> beautifulsoup-3.0.8.ebuild:
  Stable for HPPA (bug #301955).