@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/Attic/beautifulsoup-3.0.8.1.ebuild,v 1.7 2010/08/06 15:56:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/Attic/beautifulsoup-3.0.8.1.ebuild,v 1.8 2010/08/14 17:34:34 armin76 Exp $
 
 EAPI="3"
 PYTHON_DEPEND="2"
@@ -18,7 +18,7 @@ SRC_URI="http://www.crummy.com/software/${MY_PN}/download/3.x/${MY_P}.tar.gz"
 
 LICENSE="PSF-2.3"
 SLOT="3.0"
-KEYWORDS="~alpha amd64 ~arm hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd ~amd64-linux"
+KEYWORDS="alpha amd64 ~arm hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd ~amd64-linux"
 IUSE=""
 
 DEPEND=""
