@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/beautifulsoup
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.41 2010/08/06 15:56:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.42 2010/08/14 17:34:34 armin76 Exp $
+
+  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> beautifulsoup-3.0.8.ebuild,
+  beautifulsoup-3.0.8.1.ebuild:
+  alpha stable
 
   06 Aug 2010; Jeroen Roovers <jer@gentoo.org> beautifulsoup-3.0.8.1.ebuild:
   Stable for PPC (bug #328885).
